# tuple_space

./: README.md  pyproject.toml  tuple_space.py
t2_tuple_space/: __main__.py  tuple_space.py
