[tool.poetry]
name = "t2-tuple-space"
version = "0.1.0"
description = ""
authors = ["Patrick Machado <patrick.silva@orium.network>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pysyncobj = "^0.3.12"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
